--- a/app/src/main/res/layout/activity_detail.xml
+++ b/app/src/main/res/layout/activity_detail.xml
@@ -3,4 +3,11 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
+    <TextView
+        android:id="@+id/tv_weather_data"
+        android:layout_width="wrap_content"
+        android:padding="16dp"
+        android:textSize="24sp"
+        android:layout_height="wrap_content"/>
+
 </FrameLayout>
